<resources>
    <string name="app_name">quatro_telas</string>
    <string name="material_design">Material Design UI Kit</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply dummy text of\nthe printing and typesetting industry.</string>
    <string name="sign_up">Sign Up</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="already_have_an_account_log_in">ALREADY HAVE AN ACCOUNT? LOG IN!</string>
    <string name="brian_tucker">Brian Tucker</string>
    <string name="dennis_spencer">Dennis Spencer</string>
    <string name="daniel_grant">Daniel Grant</string>
    <string name="heather_jacobs">Heather Jacobs</string>
    <string name="brian">Brian</string>
    <string name="dennis">Dennis</string>
    <string name="daniel">Daniel</string>
    <string name="heather">Heather</string>
    <string name="gerald">Gerald</string>
    <string name="walters">Walters</string>
    <string name="ellis">Ellis</string>
    <string name="radio">Radio</string>
    <string name="profile">Profile</string>
    <string name="john_bergen">John Bergen</string>
    <string name="new_york_ny">New York, NY</string>
    <string name="about">About</string>
    <string name="lorem_ipsum_gigante">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</string>
    <string name="connections">Connections</string>
    <string name="connect">Connect</string>
    <string name="feed">Feed</string>
    <string name="jordan_robinson">Jordan Robinson</string>
    <string name="today_1_45_pm">Today, 1:45 PM</string>
</resources>