<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_zeplin">

    <ImageView
        android:id="@+id/menu_hamburguer"
        android:layout_width="18dp"
        android:layout_height="12dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="46dp"
        android:background="@drawable/menu" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/sign_up"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="12sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="136dp"
        android:fontFamily="@font/roboto_light"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:textSize="36sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="188dp"
        android:fontFamily="@font/roboto_light"
        android:text="@string/material_design"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="280dp"
        android:layout_height="227dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="273dp"
        android:orientation="vertical">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@color/white"
            android:hint="@string/username"
            android:paddingStart="20dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/C" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@color/white"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingStart="20dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/C" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@color/white"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingStart="20dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/C" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="match_parent">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/white"
                    android:hint="@string/country"
                    android:inputType="textPassword"
                    android:paddingStart="20dp" />

                <ImageView
                    android:layout_width=""
                    android:layout_height=""/>

            </LinearLayout>



            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/C" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="match_parent">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/white"
                    android:hint="@string/city"
                    android:inputType="textPassword"
                    android:paddingStart="20dp" />

                <ImageView
                    android:layout_width=""
                    android:layout_height=""/>

            </LinearLayout>



        </LinearLayout>


    </LinearLayout>


</RelativeLayout>