<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pale_gray"
    tools:context=".Tela3">

    <View
        android:layout_width="match_parent"
        android:layout_height="365dp"
        android:background="@drawable/background_zeplin" />

    <ImageView
        android:layout_width="18dp"
        android:layout_height="12dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="46dp"
        android:background="@drawable/menu" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/profile"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="12sp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:background="@drawable/avatar_diver" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="240dp"
        android:fontFamily="@font/roboto_light"
        android:text="@string/john_bergen"
        android:textColor="@color/white"
        android:textSize="26sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="280dp"
        android:fontFamily="@font/roboto_light"
        android:text="@string/new_york_ny"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <!--    Linear Layout About-->
    <LinearLayout
        android:id="@+id/ll1"
        android:layout_width="match_parent"
        android:layout_height="168dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="321dp"
        android:background="@color/white"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/about"
            android:textColor="@color/coral"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginHorizontal="20dp"
            android:layout_weight="1"
            android:fontFamily="@font/roboto_light"
            android:gravity="center"
            android:text="@string/lorem_ipsum_gigante"
            android:textColor="@color/warm_grey"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="80dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginHorizontal="10dp"
                android:layout_weight="1"
                android:background="@drawable/bolinha" />

            <Button
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginHorizontal="10dp"
                android:layout_weight="1"
                android:background="@drawable/bolinha" />

            <Button
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginHorizontal="10dp"
                android:layout_weight="1"
                android:background="@drawable/bolinha" />

            <Button
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginHorizontal="10dp"
                android:layout_weight="1"
                android:background="@drawable/bolinha" />


        </LinearLayout>


    </LinearLayout>

    <!--    Linear Layout do Connections-->
    <LinearLayout
        android:id="@+id/LL2"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:layout_below="@id/ll1"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:fontFamily="@font/roboto_light"
            android:gravity="center"
            android:text="@string/connections"
            android:textColor="@color/coral"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="10dp"
            android:layout_weight="1">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginHorizontal="10dp"
                android:layout_weight="1"
                android:background="@drawable/avatar_astronaut" />

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginHorizontal="10dp"
                android:layout_weight="1"
                android:background="@drawable/avatar_detective" />

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginHorizontal="10dp"
                android:layout_weight="1"
                android:background="@drawable/avatar_diver" />

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginHorizontal="10dp"
                android:layout_weight="1"
                android:background="@drawable/avatar_disc_jockey" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_below="@id/LL2"
        android:background="@drawable/radius_btn_gradient"
        android:layout_marginHorizontal="10dp"
        android:text="@string/connect"
        android:textSize="14sp"
        android:fontFamily="@font/roboto_medium"
        android:textColor="@color/white"/>


</RelativeLayout>