<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pale_gray"
    tools:context=".Tela4">

    <View
        android:id="@+id/view1"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@drawable/backgroud_zeplin2" />

    <ImageView
        android:layout_width="18dp"
        android:layout_height="12dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="46dp"
        android:background="@drawable/menu" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/feed"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="12sp" />

    <!--    Linear Layout Pai-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/view1"
        android:orientation="vertical"
        android:padding="10dp">

        <!--        Linear Layout Cima-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_margin="20dp"
                    android:background="@drawable/avatar_astronaut" />

                <!--                Linear Layout do nome e data-->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/roboto_light"
                        android:text="@string/jordan_robinson"
                        android:textColor="@color/coral"
                        android:textSize="12sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:fontFamily="@font/roboto_light"
                        android:text="@string/today_1_45_pm"
                        android:textColor="@color/warm_grey"
                        android:textSize="8sp" />

                </LinearLayout>

                <ImageView
                    android:layout_width="6dp"
                    android:layout_height="16dp"
                    android:layout_gravity="center|right"
                    android:layout_marginLeft="180dp"
                    android:background="@drawable/combined_shape" />


            </LinearLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:layout_gravity="center"
                android:layout_marginHorizontal="10dp"
                android:background="@drawable/material_image_3" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_light"
                android:layout_gravity="center"
                android:textSize="16sp"
                android:layout_marginTop="18dp"
                android:textColor="@color/warm_grey"
                android:text="@string/lorem_ipsum" />

        </LinearLayout>

        <!--        Linear Layout Baixo-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_margin="20dp"
                    android:background="@drawable/avatar_astronaut" />

                <!--                Linear Layout do nome e data-->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/roboto_light"
                        android:text="@string/jordan_robinson"
                        android:textColor="@color/coral"
                        android:textSize="12sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:fontFamily="@font/roboto_light"
                        android:text="@string/today_1_45_pm"
                        android:textColor="@color/warm_grey"
                        android:textSize="8sp" />

                </LinearLayout>

                <ImageView
                    android:layout_width="6dp"
                    android:layout_height="16dp"
                    android:layout_gravity="center|right"
                    android:layout_marginLeft="180dp"
                    android:background="@drawable/combined_shape" />


            </LinearLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:layout_gravity="center"
                android:layout_marginHorizontal="10dp"
                android:background="@drawable/material_image_3" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_light"
                android:layout_gravity="center"
                android:textSize="16sp"
                android:layout_marginTop="18dp"
                android:textColor="@color/warm_grey"
                android:text="@string/lorem_ipsum" />

        </LinearLayout>


    </LinearLayout>


</RelativeLayout>